test/parse-checks/type-at-filescope-3.good
type-at-filescope-3.pebl:10: error: type declarations can only be declared at file scope
