test/parse-checks/type-at-filescope-3.pebl
func foo(): void {

}

func bar(): void {
  # if 1 {
  
  # }
  # else {
    type t = {x:int;}
  # }
}
